--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,7 +8,7 @@ spec:
  - host: k8s-index.devopscoursewithbalakonda.xyz
    http:
      paths:
-     - path: /contact.html
+     - path: /contact-svc.contact.svc.cluster.local
        backend:
          serviceName: contact-svc
          servicePort: 80
