--- a/k8s/dept.yaml
+++ b/k8s/dept.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: static
-        image: 861531569385.dkr.ecr.ap-northeast-1.amazonaws.com/second:number 
+        image: 861531569385.dkr.ecr.ap-northeast-1.amazonaws.com/contact:number 
         ports:
         - containerPort: 80
